# pipewarden

./: .pipewarden.toml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  error.txt  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  quality-gate.yml
docs/: config.md  release.md
src/pipeline_guard/: cli.py  runner.py  stages.py
src/pipewarden/: __init__.py  cli.py  config.py  detect.py  printer.py  reporters.py  runner.py  secrets.py  stages.py  types.py
tests/: conftest.py  test_cli.py  test_config.py  test_detect.py  test_reporters.py  test_runner.py  test_secrets.py  test_stages.py
